# smallnum

./: Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: test.yml
examples/: const_arena.rs  const_expr.rs
src/: lib.rs  signed.rs  unsigned.rs
