[package]
name = "smallnum"
version = "0.1.0"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tnballo/smallnum"
repository = "https://github.com/tnballo/smallnum"
documentation = "https://docs.rs/smallnum"
keywords = ["small", "num", "integer", "macro", "no_std"]
categories = ["embedded", "no-std", "rust-patterns", "config", "memory-management"]
description = "Integer optimization: macros return the smallest integer type capable of fitting a static bounds."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.sh",
    "Cargo.toml",
    "LICENSE",
]

[dev-dependencies]
static_assertions = "1"