[package]
name = "smallnum"
version = "0.2.0"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tnballo/smallnum"
repository = "https://github.com/tnballo/smallnum"
documentation = "https://docs.rs/smallnum"
keywords = ["small", "num", "integer", "macro", "no_std"]
categories = ["embedded", "no-std", "rust-patterns", "config"]
description = "Compile-time size optimization for numeric primitives."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.sh",
    "Cargo.toml",
    "LICENSE",
]

[dev-dependencies]
static_assertions = "1"